+++++++++++
Python News
+++++++++++

What's New in Python 3.3.0 Beta 2?
==================================

*Release date: xx-xxx-2012*

Core and Builtins
-----------------


Library
-------

- Issue #5346: Preserve permissions of mbox, MMDF and Babyl mailbox
  files on flush().

- Issue #10571: Fix the "--sign" option of distutils' upload command.
  Patch by Jakub Wilk.

- Issue #9559: If messages were only added, a new file is no longer
  created and renamed over the old file when flush() is called on an
  mbox, MMDF or Babyl mailbox.

- Issue 10924: Fixed mksalt() to use a RNG that is suitable for cryptographic
  purpose.

Extension Modules
-----------------

- Issue #15194: Update libffi to the 3.0.11 release.

Tools/Demos
-----------

- Issue #12605: The gdb hooks for debugging CPython (within Tools/gdb) have
  been enhanced to show information on more C frames relevant to CPython within
  the "py-bt" and "py-bt-full" commands:
    * C frames that are waiting on the GIL
    * C frames that are garbage-collecting
    * C frames that are due to the invocation of a PyCFunction

Build
-----

- Issue #14330: For cross builds, don't use host python, use host search paths
  for host compiler.


What's New in Python 3.3.0 Beta 1?
==================================

*Release date: 27-Jun-2012*

Core and Builtins
-----------------

- Fix a (most likely) very rare memory leak when calling main() and not being
  able to decode a command-line argument.

- Issue #14815: Use Py_ssize_t instead of long for the object hash, to
  preserve all 64 bits of hash on Win64.

- Issue #12268: File readline, readlines and read() or readall() methods
  no longer lose data when an underlying read system call is interrupted.
  IOError is no longer raised due to a read system call returning EINTR
  from within these methods.

- Issue #11626: Add _SizeT functions to stable ABI.

- Issue #15146: Add PyType_FromSpecWithBases. Patch by Robin Schreiber.
